--- a/style.css
+++ b/style.css
@@ -1,15 +1,33 @@
-body{
-    background: rgb(138, 43, 226);
-    color: rgb(0, 0, 0);
-    font-family:'Times New Roman', Times, serif;
+body {
+    background-color: #1D4221;
+    color: white;
+    font-family: "Bai Jamjuree", sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 700px;
     margin: 0;
 }
-button{
-    background: rgb(228, 10, 137);
-    color:rgb(0, 0, 0);
-    font-family:Georgia, 'Times New Roman', Times, serif;
+
+button {
+    background-color: #64A712;
+    color: white;
+    font-family: "Bai Jamjuree", sans-serif;
+}
+
+.passo {
+    display: none;
+}
+
+.passo.ativo {
+    display:block;
+}
+
+main {
+    text-align: center;
+    max-width: 90%;
+}
+
+img {
+    max-width: 90%;
 }
